--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Dosbek</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Посты из JSON на GitHub</h1>
-    <div id="container">Загрузка...</div>
+    <div id="loader" class="loader"></div>
+    <div id="container"></div>
 </body>
 <script src="main.js"></script>
 </html>
