--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Автомобиль вашей мечты | Dosbek auto</title>
@@ -53,15 +53,11 @@
                         <h3 class="footer__title">Контакты</h3>
                         <ul>
                             <li>
-                                <img src="images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
+                                <img src="../dosbek_data/images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
                                 <a href="tel:+996556991998">+996 556 991 998</a>
                             </li>
                             <li>
-                                <img src="images/icon-email-footer.png" alt="Email Icon" class="footer__contact__icon"/>
-                                <a href="mailto:info@dosbekauto.com">info@dosbekauto.com</a>
-                            </li>
-                            <li>
-                                <img src="images/icon-address-footer.png" alt="Location Icon" class="footer__contact__icon"/>
+                                <img src="../dosbek_data/images/icon-address-footer.png" alt="Location Icon" class="footer__contact__icon"/>
                                 <a href="https://maps.app.goo.gl/qsF3G6U12e69q3AUA" target="_blank">64 Ала-Арчинская улица, Бишкек</a>
                             </li>
                         </ul>
@@ -70,13 +66,10 @@
                         <h3 class="footer__title">Следите за нами</h3>
                         <div class="footer__social__links">
                             <a href="https://www.instagram.com/dosbek_auto/" class="footer__social__link" target="_blank">
-                                <img src="images/icon-instagram.svg" alt="Instagram" class="footer__social__icon"/>
+                                <img src="../dosbek_data/images/icon-instagram.svg" alt="Instagram" class="footer__social__icon"/>
                             </a>
                             <a href="https://api.whatsapp.com/message/ZBO2G53T7FH5M1?autoload=1&app_absent=0" class="footer__social__link" target="_blank">
-                                <img src="images/icon-whatsapp.svg" alt="WhatsApp" class="footer__social__icon"/>
-                            </a>
-                            <a href="#" class="footer__social__link" target="">
-                                <img src="images/icon-telegram.svg" alt="Telegram" class="footer__social__icon"/>
+                                <img src="../dosbek_data/images/icon-whatsapp.svg" alt="WhatsApp" class="footer__social__icon"/>
                             </a>
                         </div>
                     </div>
@@ -100,6 +93,5 @@
 <!--        </svg>-->
 <!--    </div>-->
 </body>
-<script src="js/main.js"></script>
-<script src="js/data.js"></script>
+<script src="js/app.js"></script>
 </html>
