--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Автомобиль вашей мечты | Dosbek auto</title>
     <link rel="stylesheet" href="css/bundle.css">
+    <link rel="stylesheet" href="fonts/Geometria/stylesheet.css">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/tcybkvv/dosbek_data/6187ef343397495673837948c12678f51158a86b/images/icon-favicon.svg" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
@@ -12,8 +14,17 @@
             <div class="container">
                 <div class="menu__inner">
                     <a href="" class="menu__icon">
-                        <img id="menu__icon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo-white.png" alt="Dosbek logo">
+                        <img id="menu__icon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo.png" alt="Dosbek logo">
                     </a>
+                    <div class="toggle-container theme-toggle">
+                        <label class="switch">
+                            <input type="checkbox" id="themeToggle">
+                            <span class="slider">
+                                    <img class="theme-icon sun" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/b058495d5b058b6df85bcc56cfa3f0740eb0da0a/images/icon-sun.svg" alt="Sun">
+                                    <img class="theme-icon moon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/3056328f32a31030fa2d67c34f353a911d7be304/images/icon-moon.svg" alt="Moon">
+                                </span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </header>
@@ -45,7 +56,7 @@
                 <div class="footer__items">
                     <div class="footer__about__site">
                         <a href="#" class="footer__icon">
-                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo-white.png" alt="Dosbek Auto Logo" class="footer__icon__img"/>
+                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo.png" alt="Dosbek Auto Logo" class="footer__icon__img"/>
                         </a>
                         <p class="footer__description">Dosbek Auto - ваш надежный партнер в поиске автомобилей. Найдите машину своей мечты с нами!</p>
                     </div>
@@ -53,11 +64,11 @@
                         <h3 class="footer__title">Контакты</h3>
                         <ul>
                             <li>
-                                <img src="../dosbek_data/images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
+                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
                                 <a href="tel:+996556991998">+996 556 991 998</a>
                             </li>
                             <li>
-                                <img src="../dosbek_data/images/icon-address-footer.png" alt="Location Icon" class="footer__contact__icon"/>
+                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-address-footer.png" alt="Location Icon" class="footer__contact__icon"/>
                                 <a href="https://maps.app.goo.gl/qsF3G6U12e69q3AUA" target="_blank">64 Ала-Арчинская улица, Бишкек</a>
                             </li>
                         </ul>
@@ -66,10 +77,10 @@
                         <h3 class="footer__title">Следите за нами</h3>
                         <div class="footer__social__links">
                             <a href="https://www.instagram.com/dosbek_auto/" class="footer__social__link" target="_blank">
-                                <img src="../dosbek_data/images/icon-instagram.svg" alt="Instagram" class="footer__social__icon"/>
+                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/4c7662cec227d5211b5a4b94644949deca343b3c/images/icon-instagram.svg" alt="Instagram" class="footer__social__icon"/>
                             </a>
                             <a href="https://api.whatsapp.com/message/ZBO2G53T7FH5M1?autoload=1&app_absent=0" class="footer__social__link" target="_blank">
-                                <img src="../dosbek_data/images/icon-whatsapp.svg" alt="WhatsApp" class="footer__social__icon"/>
+                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/4c7662cec227d5211b5a4b94644949deca343b3c/images/icon-whatsapp.svg" alt="WhatsApp" class="footer__social__icon"/>
                             </a>
                         </div>
                     </div>
@@ -80,18 +91,18 @@
         </footer>
     </div>
 
-<!--    <div class="loader">-->
-<!--        <svg class="car" width="102" height="40" xmlns="http://www.w3.org/2000/svg">-->
-<!--            <g transform="translate(2 1)" stroke="#002742" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">-->
-<!--                <path class="car__body" d="M47.293 2.375C52.927.792 54.017.805 54.017.805c2.613-.445 6.838-.337 9.42.237l8.381 1.863c2.59.576 6.164 2.606 7.98 4.531l6.348 6.732 6.245 1.877c3.098.508 5.609 3.431 5.609 6.507v4.206c0 .29-2.536 4.189-5.687 4.189H36.808c-2.655 0-4.34-2.1-3.688-4.67 0 0 3.71-19.944 14.173-23.902zM36.5 15.5h54.01" stroke-width="3"/>-->
-<!--                <ellipse class="car__wheel&#45;&#45;left" stroke-width="3.2" fill="#FFF" cx="83.493" cy="30.25" rx="6.922" ry="6.808"/>-->
-<!--                <ellipse class="car__wheel&#45;&#45;right" stroke-width="3.2" fill="#FFF" cx="46.511" cy="30.25" rx="6.922" ry="6.808"/>-->
-<!--                <path class="car__line car__line&#45;&#45;top" d="M22.5 16.5H2.475" stroke-width="3"/>-->
-<!--                <path class="car__line car__line&#45;&#45;middle" d="M20.5 23.5H.4755" stroke-width="3"/>-->
-<!--                <path class="car__line car__line&#45;&#45;bottom" d="M25.5 9.5h-19" stroke-width="3"/>-->
-<!--            </g>-->
-<!--        </svg>-->
-<!--    </div>-->
+    <div class="loader">
+        <svg class="car" width="102" height="40" xmlns="http://www.w3.org/2000/svg">
+            <g transform="translate(2 1)" stroke="#002742" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+                <path class="car__body" d="M47.293 2.375C52.927.792 54.017.805 54.017.805c2.613-.445 6.838-.337 9.42.237l8.381 1.863c2.59.576 6.164 2.606 7.98 4.531l6.348 6.732 6.245 1.877c3.098.508 5.609 3.431 5.609 6.507v4.206c0 .29-2.536 4.189-5.687 4.189H36.808c-2.655 0-4.34-2.1-3.688-4.67 0 0 3.71-19.944 14.173-23.902zM36.5 15.5h54.01" stroke-width="3"/>
+                <ellipse class="car__wheel--left" stroke-width="3.2" fill="#FFF" cx="83.493" cy="30.25" rx="6.922" ry="6.808"/>
+                <ellipse class="car__wheel--right" stroke-width="3.2" fill="#FFF" cx="46.511" cy="30.25" rx="6.922" ry="6.808"/>
+                <path class="car__line car__line--top" d="M22.5 16.5H2.475" stroke-width="3"/>
+                <path class="car__line car__line--middle" d="M20.5 23.5H.4755" stroke-width="3"/>
+                <path class="car__line car__line--bottom" d="M25.5 9.5h-19" stroke-width="3"/>
+            </g>
+        </svg>
+    </div>
 </body>
 <script src="js/app.js"></script>
 </html>
