--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Автомобиль вашей мечты | Dosbek auto</title>
-    <link rel="stylesheet" href="css/bundle.css">
-    <link rel="stylesheet" href="fonts/Geometria/stylesheet.css">
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/tcybkvv/dosbek_data/6187ef343397495673837948c12678f51158a86b/images/icon-favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="fonts/Geometria/stylesheet.css">
+    <link rel="stylesheet" href="css/bundle.css">
 </head>
 <body>
     <div class="wrapper">
