--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p class="footer__description">Dosbek Auto - ваш надежный партнер в поиске автомобилей. Найдите машину своей мечты с нами!</p>
                     </div>
                     <div class="footer__contact">
-                        <h3 class="footer__title">Контакты</h3>
+                        <h3 class="footer__title">Связаться с нами</h3>
                         <ul>
                             <li>
                                 <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
