--- a/index.html
+++ b/index.html
@@ -9,101 +9,136 @@
     <link rel="stylesheet" href="css/bundle.css">
 </head>
 <body>
-    <div class="wrapper">
-
-        <header class="menu">
-            <div class="container">
-                <div class="menu__inner">
-                    <a href="" class="menu__icon">
-                        <img id="menu__icon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo.png" alt="Dosbek logo">
-                    </a>
+<div class="wrapper">
+    <header class="menu">
+        <div class="container">
+            <div class="menu__inner">
+                <a href="index.html" class="menu__icon">
+                    <img id="menu__icon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo.png" alt="Dosbek logo">
+                </a>
+                <div class="menu__burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <nav class="menu__nav">
                     <div class="toggle-container theme-toggle">
                         <label class="switch">
                             <input type="checkbox" id="themeToggle">
                             <span class="slider">
-                                    <img class="theme-icon sun" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/b058495d5b058b6df85bcc56cfa3f0740eb0da0a/images/icon-sun.svg" alt="Sun">
-                                    <img class="theme-icon moon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/3056328f32a31030fa2d67c34f353a911d7be304/images/icon-moon.svg" alt="Moon">
-                                </span>
+                                <img class="theme-icon sun" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/b058495d5b058b6df85bcc56cfa3f0740eb0da0a/images/icon-sun.svg" alt="Sun">
+                                <img class="theme-icon moon" src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/3056328f32a31030fa2d67c34f353a911d7be304/images/icon-moon.svg" alt="Moon">
+                            </span>
                         </label>
                     </div>
+                    <ul>
+                        <li><a href="pages/about_site.html" class="menu__title--first">О сайте</a></li>
+                        <li><a href="pages/about_us.html" class="menu__title--first">О нас</a></li>
+                    </ul>
+                    <a href="tel:+996502101215" class="menu__call-btn">
+                        <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-call.svg" alt="Call icon">
+                        Связаться
+                    </a>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <div class="main__sort">
+                <select id="sortSelect">
+                    <option value="default">По умолчанию</option>
+                    <option value="asc">По цене (сначала дешевые)</option>
+                    <option value="desc">По цене (сначала дорогие)</option>
+                    <option value="brand-asc">По марке (A-Z)</option>
+                    <option value="brand-desc">По марке (Z-A)</option>
+                </select>
+                <select id="brandSelect">
+                    <option value="all">Все марки</option>
+                    <option value="Audi">Audi</option>
+                    <option value="BMW">BMW</option>
+                    <option value="Ford">Ford</option>
+                    <option value="Honda">Honda</option>
+                    <option value="Hyundai">Hyundai</option>
+                    <option value="Jeep">Jeep</option>
+                    <option value="Kia">Kia</option>
+                    <option value="Lexus">Lexus</option>
+                    <option value="Mazda">Mazda</option>
+                    <option value="Mercedes-Benz">Mercedes-Benz</option>
+                    <option value="Nissan">Nissan</option>
+                    <option value="Porsche">Porsche</option>
+                    <option value="Subaru">Subaru</option>
+                    <option value="Tesla">Tesla</option>
+                    <option value="Toyota">Toyota</option>
+                    <option value="Volkswagen">Volkswagen</option>
+                </select>
+                <div class="price-range">
+                    <input type="number" id="priceMin" placeholder="Цена от (сом)">
+                    <input type="number" id="priceMax" placeholder="Цена до (сом)">
+                </div>
+                <div class="toggle-container">
+                    <label class="switch">
+                        <input type="checkbox" id="currencyToggle">
+                        <span class="slider"></span>
+                    </label>
+                    <span>Цены в USD</span>
                 </div>
             </div>
-        </header>
-
-        <main class="main">
-            <div class="container">
-                <div class="main__sort">
-                    <select id="sortSelect">
-                        <option value="default">По умолчанию</option>
-                        <option value="asc">По цене (сначала дешевые)</option>
-                        <option value="desc">По цене (сначала дорогие)</option>
-                    </select>
-
-                    <div class="toggle-container">
-                        <label class="switch">
-                            <input type="checkbox" id="currencyToggle">
-                            <span class="slider"></span>
-                        </label>
-                        <span>Цены в USD</span>
-                    </div>
+            <div id="cars"></div>
+            <div class="pagination"></div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__items">
+                <div class="footer__about__site">
+                    <a href="#" class="footer__icon">
+                        <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo.png" alt="Dosbek Auto Logo" class="footer__icon__img"/>
+                    </a>
+                    <p class="footer__description">Dosbek Auto - ваш надежный партнер в поиске автомобилей. Найдите машину своей мечты с нами!</p>
                 </div>
-                <div id="cars"></div>
-                <div class="pagination"></div>
-            </div>
-        </main>
-
-        <footer class="footer">
-            <div class="container">
-                <div class="footer__items">
-                    <div class="footer__about__site">
-                        <a href="#" class="footer__icon">
-                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-logo.png" alt="Dosbek Auto Logo" class="footer__icon__img"/>
+                <div class="footer__contact">
+                    <h3 class="footer__title">Связаться с нами</h3>
+                    <ul>
+                        <li>
+                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
+                            <a href="tel:+996502101215">+996 502 101 215</a>
+                        </li>
+                        <li>
+                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-address-footer.png" alt="Location Icon" class="footer__contact__icon"/>
+                            <a href="https://maps.app.goo.gl/qsF3G6U12e69q3AUA" target="_blank">64 Ала-Арчинская улица, Бишкек</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__social">
+                    <h3 class="footer__title">Следите за нами</h3>
+                    <div class="footer__social__links">
+                        <a href="https://www.instagram.com/dosbek_auto/" class="footer__social__link" target="_blank">
+                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/4c7662cec227d5211b5a4b94644949deca343b3c/images/icon-instagram.svg" alt="Instagram" class="footer__social__icon"/>
                         </a>
-                        <p class="footer__description">Dosbek Auto - ваш надежный партнер в поиске автомобилей. Найдите машину своей мечты с нами!</p>
-                    </div>
-                    <div class="footer__contact">
-                        <h3 class="footer__title">Связаться с нами</h3>
-                        <ul>
-                            <li>
-                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-phone-footer.png" alt="Phone Icon" class="footer__contact__icon"/>
-                                <a href="tel:+996556991998">+996 556 991 998</a>
-                            </li>
-                            <li>
-                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/refs/heads/main/images/icon-address-footer.png" alt="Location Icon" class="footer__contact__icon"/>
-                                <a href="https://maps.app.goo.gl/qsF3G6U12e69q3AUA" target="_blank">64 Ала-Арчинская улица, Бишкек</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer__social">
-                        <h3 class="footer__title">Следите за нами</h3>
-                        <div class="footer__social__links">
-                            <a href="https://www.instagram.com/dosbek_auto/" class="footer__social__link" target="_blank">
-                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/4c7662cec227d5211b5a4b94644949deca343b3c/images/icon-instagram.svg" alt="Instagram" class="footer__social__icon"/>
-                            </a>
-                            <a href="https://api.whatsapp.com/message/ZBO2G53T7FH5M1?autoload=1&app_absent=0" class="footer__social__link" target="_blank">
-                                <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/4c7662cec227d5211b5a4b94644949deca343b3c/images/icon-whatsapp.svg" alt="WhatsApp" class="footer__social__icon"/>
-                            </a>
-                        </div>
+                        <a href="https://api.whatsapp.com/message/ZBO2G53T7FH5M1?autoload=1&app_absent=0" class="footer__social__link" target="_blank">
+                            <img src="https://raw.githubusercontent.com/tcybkvv/dosbek_data/4c7662cec227d5211b5a4b94644949deca343b3c/images/icon-whatsapp.svg" alt="WhatsApp" class="footer__social__icon"/>
+                        </a>
                     </div>
                 </div>
-                <div class="footer__line"></div>
-                <p class="footer__copyright">Copyright © <span id="year"></span> Dosbek Auto. Все права защищены.</p>
             </div>
-        </footer>
-    </div>
-
-    <div class="loader">
-        <svg class="car" width="102" height="40" xmlns="http://www.w3.org/2000/svg">
-            <g transform="translate(2 1)" stroke="#002742" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
-                <path class="car__body" d="M47.293 2.375C52.927.792 54.017.805 54.017.805c2.613-.445 6.838-.337 9.42.237l8.381 1.863c2.59.576 6.164 2.606 7.98 4.531l6.348 6.732 6.245 1.877c3.098.508 5.609 3.431 5.609 6.507v4.206c0 .29-2.536 4.189-5.687 4.189H36.808c-2.655 0-4.34-2.1-3.688-4.67 0 0 3.71-19.944 14.173-23.902zM36.5 15.5h54.01" stroke-width="3"/>
-                <ellipse class="car__wheel--left" stroke-width="3.2" fill="#FFF" cx="83.493" cy="30.25" rx="6.922" ry="6.808"/>
-                <ellipse class="car__wheel--right" stroke-width="3.2" fill="#FFF" cx="46.511" cy="30.25" rx="6.922" ry="6.808"/>
-                <path class="car__line car__line--top" d="M22.5 16.5H2.475" stroke-width="3"/>
-                <path class="car__line car__line--middle" d="M20.5 23.5H.4755" stroke-width="3"/>
-                <path class="car__line car__line--bottom" d="M25.5 9.5h-19" stroke-width="3"/>
-            </g>
-        </svg>
-    </div>
+            <div class="footer__line"></div>
+            <p class="footer__copyright">Copyright © <span id="year"></span> Dosbek Auto. Все права защищены.</p>
+        </div>
+    </footer>
+</div>
+<div class="loader">
+    <svg class="car" width="102" height="40" xmlns="http://www.w3.org/2000/svg">
+        <g transform="translate(2 1)" stroke="#002742" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round">
+            <path class="car__body" d="M47.293 2.375C52.927.792 54.017.805 54.017.805c2.613-.445 6.838-.337 9.42.237l8.381 1.863c2.59.576 6.164 2.606 7.98 4.531l6.348 6.732 6.245 1.877c3.098.508 5.609 3.431 5.609 6.507v4.206c0 .29-2.536 4.189-5.687 4.189H36.808c-2.655 0-4.34-2.1-3.688-4.67 0 0 3.71-19.944 14.173-23.902zM36.5 15.5h54.01" stroke-width="3"/>
+            <ellipse class="car__wheel--left" stroke-width="3.2" fill="#FFF" cx="83.493" cy="30.25" rx="6.922" ry="6.808"/>
+            <ellipse class="car__wheel--right" stroke-width="3.2" fill="#FFF" cx="46.511" cy="30.25" rx="6.922" ry="6.808"/>
+            <path class="car__line car__line--top" d="M22.5 16.5H2.475" stroke-width="3"/>
+            <path class="car__line car__line--middle" d="M20.5 23.5H.4755" stroke-width="3"/>
+            <path class="car__line car__line--bottom" d="M25.5 9.5h-19" stroke-width="3"/>
+        </g>
+    </svg>
+</div>
 </body>
 <script src="js/app.js"></script>
 </html>
